# ag-ui

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: auto-approve-community.yml  dojo-e2e.yml
apps/dojo/: package.json  tsconfig.json
apps/dojo/scripts/: generate-content-json.ts
apps/dojo/src/: agents.ts  config.ts  env.ts  files.json  menu.ts
apps/dojo/src/app/: globals.css
apps/dojo/src/types/: integration.ts
docs/: docs.json  introduction.mdx
docs/concepts/: messages.mdx
docs/drafts/: multimodal-messages.mdx
docs/sdk/js/client/: abstract-agent.mdx  compaction.mdx  middleware.mdx  subscriber.mdx
docs/sdk/js/core/: events.mdx  types.mdx
docs/sdk/kotlin/: overview.mdx
docs/sdk/kotlin/client/: overview.mdx
docs/sdk/python/core/: events.mdx  types.mdx
integrations/a2a/typescript/: package.json
integrations/a2a/typescript/src/: agent.ts
integrations/adk-middleware/python/: pyproject.toml
integrations/adk-middleware/python/src/ag_ui_adk/: adk_agent.py  event_translator.py  session_manager.py
integrations/adk-middleware/python/src/ag_ui_adk/utils/: converters.py
integrations/adk-middleware/python/tests/: test_event_translator_comprehensive.py  test_tool_result_flow.py
integrations/agno/typescript/: package.json
integrations/agno/typescript/src/: index.ts
integrations/community/spring-ai/typescript/: package.json
integrations/crew-ai/typescript/: package.json
integrations/crew-ai/typescript/src/: index.ts
integrations/langgraph/python/: pyproject.toml
integrations/langgraph/python/ag_ui_langgraph/: utils.py
integrations/langgraph/python/examples/: pyproject.toml
integrations/langgraph/python/examples/agents/multimodal_messages/: __init__.py  agent.py
integrations/langgraph/python/tests/: test_multimodal.py
integrations/langgraph/typescript/: package.json
integrations/llama-index/typescript/: package.json
integrations/pydantic-ai/typescript/: package.json
middlewares/a2a-middleware/src/: index.ts
sdks/community/kotlin/: .gitignore  CHANGELOG.md  OVERVIEW.md  README.md  build.gradle.kts
sdks/python/: pyproject.toml
sdks/python/tests/: test_events.py  test_types.py
sdks/typescript/: README.md
(+118 files in other folders)
