[tool.poetry]
name = "langgraph_agui_dojo"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "agents" }]
authors = ["Ran Shem Tov"]

[project]
name = "agents"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"
langchain = ">=1.0.3"
langchain-anthropic = ">=1.0.1"
langchain-core = ">=1.0.2"
langchain-community = ">=0.0.36"
langchain-google-genai = ">=2.1.12"
langchain-openai = ">=1.0.1"
langgraph = ">=1.0.0"
ag-ui-langgraph = { path = "../" }
python-dotenv = "^1.0.0"
fastapi = "^0.115.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "agents.dojo:main"
